--- a/web/blocked-domains.html
+++ b/web/blocked-domains.html
@@ -183,10 +183,18 @@
                       xmlns="http://www.w3.org/2000/svg"
                     >
                       <path
-                        fill-rule="evenodd"
-                        clip-rule="evenodd"
-                        d="M5.5 3.25C4.25736 3.25 3.25 4.25736 3.25 5.5V18.5C3.25 19.7426 4.25736 20.75 5.5 20.75H18.5C19.7426 20.75 20.75 19.7426 20.75 18.5V8.62132C20.75 8.03651 20.5176 7.47572 20.1049 7.06307L16.9369 3.89508C16.5243 3.48243 15.9635 3.25 15.3787 3.25H5.5ZM4.75 5.5C4.75 5.08579 5.08579 4.75 5.5 4.75H7.25V9C7.25 9.41421 7.58579 9.75 8 9.75H14.5C14.9142 9.75 15.25 9.41421 15.25 9V4.75H15.3787C15.5626 4.75 15.7428 4.82067 15.8751 4.95301L19.0431 8.12099C19.1754 8.25332 19.25 8.43353 19.25 8.62132V18.5C19.25 18.9142 18.9142 19.25 18.5 19.25H5.5C5.08579 19.25 4.75 18.9142 4.75 18.5V5.5ZM8.75 4.75H13.75V8.25H8.75V4.75ZM8.25 12.25H15.75V17.75H8.25V12.25Z M8.25 12.25H15.75V17.75H8.25V12.25Z"
+                        d="M5.5 3.25C4.25736 3.25 3.25 4.25736 3.25 5.5V18.5C3.25 19.7426 4.25736 20.75 5.5 20.75H18.5C19.7426 20.75 20.75 19.7426 20.75 18.5V8.62132C20.75 8.03651 20.5176 7.47572 20.1049 7.06307L16.9369 3.89508C16.5243 3.48243 15.9635 3.25 15.3787 3.25H5.5ZM4.75 5.5C4.75 5.08579 5.08579 4.75 5.5 4.75H7.25V9C7.25 9.41421 7.58579 9.75 8 9.75H14.5C14.9142 9.75 15.25 9.41421 15.25 9V4.75H15.3787C15.5626 4.75 15.7428 4.82067 15.8751 4.95301L19.0431 8.12099C19.1754 8.25332 19.25 8.43353 19.25 8.62132V18.5C19.25 18.9142 18.9142 19.25 18.5 19.25H5.5C5.08579 19.25 4.75 18.9142 4.75 18.5V5.5ZM8.75 4.75H13.75V8.25H8.75V4.75Z"
                         fill="currentColor"
+                      />
+
+                      <rect
+                        x="8.25"
+                        y="12.25"
+                        width="7.5"
+                        height="5.5"
+                        stroke="currentColor"
+                        stroke-width="1.5"
+                        fill="none"
                       />
                     </svg>
 
